--- a/test/visual/form-inline.html
+++ b/test/visual/form-inline.html
@@ -56,9 +56,13 @@
         <div class="form-group me-sm-0_5">
             <label class="sr-only" for="inputAmount2">Amount (in dollars)</label>
             <div class="input-group">
-                <div class="input-group-addon">$</div>
+                <div class="input-group-addon">
+                    <div class="input-group-text">$</div>
+                </div>
                 <input type="text" class="form-control" id="inputAmount2" placeholder="Amount">
-                <div class="input-group-addon">.00</div>
+                <div class="input-group-addon">
+                    <div class="input-group-text">.00</div>
+                </div>
             </div>
         </div>
         <button type="submit" class="btn btn-primary">Transfer cash</button>
@@ -74,11 +78,10 @@
             <option value="2">Two</option>
             <option value="3">Three</option>
         </select>
-        <label class="custom-control custom-checkbox mb-0_5 me-sm-0_5 mb-sm-0">
+        <div class="custom-control custom-checkbox mb-0_5 me-sm-0_5 mb-sm-0">
             <input type="checkbox" class="custom-control-input">
-            <span class="custom-control-indicator"></span>
-            <span class="custom-control-description">Remember my preference</span>
-        </label>
+            <label class="custom-control-label">Remember my preference</label>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
@@ -92,11 +95,10 @@
             <option value="2">Two</option>
             <option value="3">Three</option>
         </select>
-        <label class="custom-control custom-checkbox mb-0_5 me-sm-0_5 mb-sm-0">
+        <div class="custom-control custom-checkbox mb-0_5 me-sm-0_5 mb-sm-0">
             <input type="checkbox" class="custom-control-input">
-            <span class="custom-control-indicator"></span>
-            <span class="custom-control-description">Remember my preference</span>
-        </label>
+            <label class="custom-control-label">Remember my preference</label>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
