--- a/test/visual/button.html
+++ b/test/visual/button.html
@@ -148,6 +148,138 @@ Anchor variants:<br />
     <button type="button" class="btn btn-danger btn-xsmall btn-block">Block level button</button>
 </p>
 
+<h2 id="button">Button Check</h2>
+
+<strong>Toggle State:</strong>
+<p>
+    <div class="btn-check">
+        <input id="checkbox0" type="checkbox" class="btn-check-input">
+        <label for="checkbox0" class="btn btn-info">Single toggle</label>
+    </div>
+    &nbsp;
+    <div class="btn-check">
+        <input id="checkbox1" type="checkbox" class="btn-check-input" checked>
+        <label for="checkbox1" class="btn btn-info">Single toggle</label>
+    </div>
+</p>
+
+<div class="row mb-1">
+    <div class="col-12">
+        <strong>Checkbox:</strong>
+    </div>
+    <div class="col-sm-6">
+        <div class="btn-group">
+            <div class="btn-check">
+                <input id="checkbox2" type="checkbox" class="btn-check-input" checked>
+                <label for="checkbox2" class="btn btn-info">Check 1</label>
+            </div>
+            <div class="btn-check">
+                <input id="checkbox3" type="checkbox" class="btn-check-input">
+                <label for="checkbox3" class="btn btn-info">Check 2</label>
+            </div>
+            <div class="btn-check">
+                <input id="checkbox4" type="checkbox" class="btn-check-input">
+                <label for="checkbox4" class="btn btn-info">Check 3</label>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="btn-group">
+            <div class="btn-check">
+                <input id="checkbox5" type="checkbox" class="btn-check-input" checked>
+                <label for="checkbox5" class="btn btn-outline-info">Check 1</label>
+            </div>
+            <div class="btn-check">
+                <input id="checkbox6" type="checkbox" class="btn-check-input">
+                <label for="checkbox6" class="btn btn-outline-info">Check 2</label>
+            </div>
+            <div class="btn-check">
+                <input id="checkbox7" type="checkbox" class="btn-check-input">
+                <label for="checkbox7" class="btn btn-outline-info">Check 3</label>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row mb-1">
+    <div class="col-12">
+        <strong>Radio:</strong>
+    </div>
+    <div class="col-sm-6">
+        <div class="btn-group">
+            <div class="btn-check">
+                <input id="radio0-0" type="radio" name="radio0" class="btn-check-input" checked>
+                <label for="radio0-0" class="btn btn-info">Radio 1</label>
+            </div>
+            <div class="btn-check">
+                <input id="radio0-1" type="radio" name="radio0" class="btn-check-input">
+                <label for="radio0-1" class="btn btn-info">Radio 2</label>
+            </div>
+            <div class="btn-check">
+                <input id="radio0-2" type="radio" name="radio0" class="btn-check-input">
+                <label for="radio0-2" class="btn btn-info">Radio 3</label>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="btn-group">
+            <div class="btn-check">
+                <input id="radio1-0" type="radio" name="radio1" class="btn-check-input" checked>
+                <label for="radio1-0" class="btn btn-outline-info">Radio 1</label>
+            </div>
+            <div class="btn-check">
+                <input id="radio1-1" type="radio" name="radio1" class="btn-check-input">
+                <label for="radio1-1" class="btn btn-outline-info">Radio 2</label>
+            </div>
+            <div class="btn-check">
+                <input id="radio1-2" type="radio" name="radio1" class="btn-check-input">
+                <label for="radio1-2" class="btn btn-outline-info">Radio 3</label>
+            </div>
+        </div>
+    </div>
+</div>
+
+<strong>Toggle State (Disabled):</strong>
+<p>
+    <div class="btn-check">
+        <input id="checkbox8" type="checkbox" class="btn-check-input" disabled>
+        <label for="checkbox8" class="btn btn-info">Single toggle</label>
+    </div>
+</p>
+<div class="row mb-1">
+    <div class="col-sm-6">
+        <div class="btn-group">
+            <div class="btn-check">
+                <input id="checkbox9" type="checkbox" class="btn-check-input" checked>
+                <label for="checkbox9" class="btn btn-outline-info">Check 1</label>
+            </div>
+            <div class="btn-check">
+                <input id="checkbox10" type="checkbox" class="btn-check-input">
+                <label for="checkbox10" class="btn btn-outline-info">Check 2</label>
+            </div>
+            <div class="btn-check">
+                <input id="checkbox11" type="checkbox" class="btn-check-input" disabled>
+                <label for="checkbox11" class="btn btn-outline-info">Check 3</label>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-6">
+        <div class="btn-group">
+            <div class="btn-check">
+                <input id="radio2-0" type="radio" name="radio2" class="btn-check-input" checked>
+                <label for="radio2-0" class="btn btn-info">Radio 1</label>
+            </div>
+            <div class="btn-check">
+                <input id="radio2-1" type="radio" name="radio2" class="btn-check-input">
+                <label for="radio2-1" class="btn btn-info">Radio 2</label>
+            </div>
+            <div class="btn-check">
+                <input id="radio2-2" type="radio" name="radio2" class="btn-check-input" disabled>
+                <label for="radio2-2" class="btn btn-info">Radio 3</label>
+            </div>
+        </div>
+    </div>
+</div>
+
 </div>
 </body>
 </html>
